--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to cPanel
 on:
   push:
     branches:
-      - main   # change to 'master' if your default branch is master
+      - main
 
 jobs:
   deploy:
@@ -13,13 +13,6 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # Optional: install and build (uncomment if you use Node/Vite/etc.)
-      # - name: Install dependencies
-      #   run: npm install
-      #
-      # - name: Build assets
-      #   run: npm run build
-
       - name: Upload files to cPanel via SFTP
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
         with:
@@ -27,12 +20,7 @@ jobs:
           port: 21
           username: ${{ secrets.CPANEL_USER }}
           password: ${{ secrets.CPANEL_PASSWORD }}
-
-          # local path in the repo to deploy
+          protocol: ftp
           local_path: ./
-
-          # remote path on your server
           remote_path: /www/wp-content/themes/sthc-theme
-
-          # if true, will delete remote files not in the repo (be careful!)
           delete_remote_files: false
